# minesweeper-for-university

./: README.md
Saper/: CMakeLists.txt  main.cpp
